2018-04-20  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-1034
	
	Removed PropmatPartialsData class.  Also removed mspecies,
	misotopologue, and mquantum_numbers from LineRecord to replace
	them with a QuantumIdentifier so that each line can return 
	references to their ID rather than having to recreate a new
	ID every time
	
	* files:  Many small changes were required for the above changes.
	At least the "make check" commands seems slightly faster

2018-04-20  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1033

	* src/m_hitran_xsec.cc (abs_xsec_per_speciesAddHitranXsec):

	Take into account recent Jacobian changes.

2018-04-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1032

	* src/m_jacobian.cc (PrivateTesting1,PrivateTesting2): Missed to
	comment these methods. For the moment my personal sandbox for
	testing out some retrieval tricks.

	Some small changes.

2018-04-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1031

	* src/m_transmitter.cc (iyTransmissionStandard):
	* src/m_rte.cc (iyEmissionStandard):
	* src/m_fos.cc (iyHybrid):
	* src/m_cloudradar.cc (iyActiveSingleScat):
	* src/rte.cc (rtmethods_jacobian_init): Adoption due to change in
	get_pointers_for_analytical_jacobians.

	* src/jacobian.cc (get_pointers_for_analytical_jacobians): Now
	considering cloudbox_on when setting scat_species_i.

	* src/m_rt4.cc (RT4Calc): Moved message for if( !cloudbox_on )
	from OUT0 to OUT1.

	* src/m_microphysics.cc (pnd_fieldCalcFromParticleBulkProps): Now
	does absolutely nothing if cloudbox_on = 0.

	* src/workspace.cc: Introduced inversion_iteratation_counter.

2018-04-18  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-1030

	* src/jacobian.{cc,h}:  Copy-pasted out functions
	required to remove PropmatPartialsData class.

	* src/m_jacobian.cc:  Added quantum-id tag to
	for_species_tag false statements.  This to keep
	single tag for internal and external vmr derivatives